@@ -1,3 +1,9 @@
+2004-07-14  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
+
+	* sysdeps/unix/sysv/linux/sh/sysdep-cancel.h
+	(__local_multiple_threads): Define for librt.
+	(SINGLE_THREAD_P): Likewise.
+
 2004-07-07  Jakub Jelinek  <jakub@redhat.com>
 
 	* sysdeps/pthread/getcpuclockid.c (pthread_getcpuclockid): Allow
